--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 services:
-  db:
-    image: postgres
-    environment:
-      POSTGRES_DB: test_db
-      POSTGRES_USER: test_user
-      POSTGRES_PASSWORD: test_user_password
+  # db:
+  #   image: postgres
+  #   environment:
+  #     POSTGRES_DB: test_db
+  #     POSTGRES_USER: test_user
+  #     POSTGRES_PASSWORD: test_user_password
   app:
     build:
       context: ./back-end
@@ -15,8 +15,8 @@ services:
       - ./back-end:/app
     ports:
       - '3000:3000'
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
   vueapp:
     build:
       context: ./front-ends/vuejs
