--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./app.ts",
   "scripts": {
-    "start": "npx ts-node-dev ./app.ts",
+    "start": "npx ts-node ./app.ts",
     "lint": "eslint . --ext .ts",
     "test:unit": "jest"
   },
@@ -12,15 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "express": "4.18.2",
